--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+catboost==1.0.5
+entsoe_py==0.4.1
+folium==0.12.1.post1
+geopandas==0.10.2
+graphviz==0.16
+joypy==0.2.6
+kneed==0.7.0
+lazypredict==0.2.9
+matplotlib==3.5.1
+networkx==2.6.3
+numpy==1.19.5
+pandas==1.3.4
+pip==20.2.4
+pyrsistent==0.18.0
+scikit_learn==1.0.2
+seaborn==0.11.2
+setuptools==58.0.4
+Shapely==1.8.1.post1
+SQLAlchemy==1.4.27
+timeout_decorator==0.5.0
+torch==1.10.0
+tslearn==0.5.2
